# pet-backend

./: .devcontainer.json  .dockerignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
api/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
api/admin_custom/: admin_config.py  forms.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_digest.py  0003_alter_digest_title.py  0004_alter_article_source_url_alter_digest_title.py
api/models/: article.py  digest.py
api/serializers/: article.py  digest.py  user.py
api/services/: date_utils.py  digest.py  gpt.py  parser.py
api/templates/admin/api/: generate_digest.html
api/templates/admin/api/digest/: change_list.html
api/tests/: conftest.py  factories.py  faker_setup.py  mocks.py  test_api.py  test_digest.py  test_services.py  utils.py
api/tests/auth/: conftest.py  factory.py  test_user.py
api/urls/: __init__.py  article.py  digest.py
api/views/: article.py  digest.py
core/: celery.py  schedule.yml  settings.py  urls.py
