[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["nkl708 <nklnsk708@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

django = "*"
django-stubs = "*"
djangorestframework = "*"
djangorestframework-stubs = "*"
djangorestframework-simplejwt = "*"
django-cors-headers = "*"

python-dotenv = "*"
psycopg2-binary = "*"
sentry-sdk = "*"
gunicorn = "*"

feedparser = "*"
beautifulsoup4 = "*"
types-beautifulsoup4 = "*"
g4f = "*"
celery = { version = "*", extras = ["redis", "beat"] }
celery-types = "*"
redis = "*"
types-redis = "*"
PyYAML = "*"

[tool.poetry.dev-dependencies]
ruff = "*"
mypy = "*"
bandit = "*"

black = "*"
isort = "*"

pytest = "*"
pytest-django = "*"
pytest-cov = "*"
coverage = "*"
factory-boy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [".venv"]
line-length = 79

[tool.mypy]
exclude = [".venv/"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "factory.*"
ignore_missing_imports = true

[tool.black]
line-length = 79
exclude = ".venv"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--tb=short --cov=api"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
