# =========================== Basic Project Info ===========================
[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for web application"
authors = ["nkl708 <nklnsk708@gmail.com>"]
package-mode = false

# ========================== Production dependencies ==========================
[tool.poetry.dependencies]
python = "^3.11"

# --- Django and REST ---
django = "*"
djangorestframework = "*"
django-cors-headers = "*"

# --- WSGI ---
gunicorn = "*"

# --- Database ---
psycopg2-binary = "*"

# --- Environment --
python-dotenv = "*"

# --- Parse Tools  ---
feedparser = "*"

# --- Queue Processing ---
celery = { version = "*", extras = ["redis", "beat"] }
redis = "*"

# --- YAML ---
pyyaml = "*"

# --- Time ---
pytz = "*"

# --- Monitoring / Logging / Error Reporting
sentry-sdk = "*"

# ======================= Development dependencies ======================
[tool.poetry.group.dev.dependencies]
# --- Stubs ---
django-stubs = "*"
djangorestframework-stubs = "*"
celery-types = "*"
types-redis = "*"
types-pytz = "*"

# --- Code Quality & Security ---
ruff = "*"
mypy = "*"
bandit = "*"

# --- Testing ---
pytest = "*"
pytest-mock = "*"
pytest-django = "*"
pytest-cov = "*"
coverage = "*"

# ======================== Poetry Build System =======================
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ================================== Tools' Settings ==================================
[tool.ruff]
exclude = [".venv"]
line-length = 79

[tool.mypy]
exclude = [".venv/"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--tb=short --cov=api"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance tests",
]

[tool.coverage.run]
omit = [
    "api/migrations/*",
    "api/tests/*",
    "*__init__.py",
    "api/apps.py",
    "api/admin.py",
    "api/tasks.py",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
